[tool.poetry]
name = "github-auth-proxy"
version = "0.1.0"
description = ""
authors = ["Stig Ofstad <stigofstad@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
uvicorn = "^0.18.2"
requests = "^2.32.2"
python-multipart = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
